# practice

./: .gitignore  LICENSE  README.md
algorithms/: README.md  maxconsecutiveones.cc  maxconsecutiveones3.cc
algorithms/bitmagic/: README.md  alternatingbits.c  countingBits.c  hamming.c  numberComplement.c  poweroftwo.cc  reverseBits.c  stepstozero.c
algorithms/leetcode/: README.md  anagrams.cc  atoi.c  backspace.cc  binSearch.go  dividetwoint.c  factorial.cc  findFirstLast.c  finddiff.c  finddup.c  findfistlast.c  findunique.c  flattenlist.c  flattenlist.cc  getInsert.c  groupAnagrams.go  heapsort.c  insertPosition.c  intersection.c  kdiff.c  kdiff.cc  klargest.c  longpressedname.cc  maxconsecutiveones3.cc  median.c  minStack.c  missingNum.c  movezereos.c  movezereos.cc  mystrstr.cc  numpalindrome.c  removeDups.cc  removeElement.c  removeElement.cc  removesubfolder.cc  reverseInt.c  reversevowels.cc  romanToInt.cc  runlength.c  serialize_btree.c  (+14 more)
algorithms/shortestPath/: run.sh  shortestPath.cc  shortestpath.cc
datastructures/: CMakeLists.txt  Dockerfile  README.md  runTests.sh  rungtest.sh
datastructures/bst/: CMakeLists.txt  bst.cc  bst.hh  bstTest.cc  bst_impl.hh  runTests.sh  (+1 more)
datastructures/linkedlist/: CMakeLists.txt  doublyCircularListTest.cc  doublycircular_impl.hh  linkedlist.hh  lruTest.cc  lru_impl.hh  runTests.sh  rungtest.sh  singlyListTest.cc  singlylist_impl.hh  template.hh  template_impl.hh  test.cc  test2.cc
design/: README.md
exercism/: Dockerfile  configure_exercism.sh  driver.sh  exercism.sh  getfiles.sh
networking/: README.md
(+152 files in other folders)
